# LibreriaFlask

./: LICENSE  Library-Management-using-Flask-and-SQLite-master.rar  requirements.txt
LibreriaFlask/: README.md  biblioteca.db  biblioteca.sqbpro  main.py  new-books-collection.db  pyproject.toml  requirements.txt
LibreriaFlask/static/: style.css
LibreriaFlask/templates/: add.html  add_event.html  add_review.html  base.html  edit.html  events.html  fines.html  index.html  inicio.html  inicio_lectura.html  loan.html  loans.html  login.html  register.html  register_author.html  view_reviews.html
